learn: correct error in ocr and modif others

--- a/src/diabet_deepL/neural_net.ipynb
+++ b/src/diabet_deepL/neural_net.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import loadtxt\n",
     "from keras.models import Sequential\n",
@@ -23,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,12 +52,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "features = dataset[:,0:8]\n",
     "labels = dataset[:,8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  6.   , 148.   ,  72.   , ...,  33.6  ,   0.627,  50.   ],\n",
+       "       [  1.   ,  85.   ,  66.   , ...,  26.6  ,   0.351,  31.   ],\n",
+       "       [  8.   , 183.   ,  64.   , ...,  23.3  ,   0.672,  32.   ],\n",
+       "       ...,\n",
+       "       [  5.   , 121.   ,  72.   , ...,  26.2  ,   0.245,  30.   ],\n",
+       "       [  1.   , 126.   ,  60.   , ...,  30.1  ,   0.349,  47.   ],\n",
+       "       [  1.   ,  93.   ,  70.   , ...,  30.4  ,   0.315,  23.   ]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features"
    ]
   },
   {
@@ -251,13 +285,7 @@
       "768/768 [==============================] - 0s 257us/step - loss: 0.3070 - accuracy: 0.8672\n",
       "Epoch 78/100\n",
       "768/768 [==============================] - 0s 262us/step - loss: 0.2964 - accuracy: 0.8633\n",
-      "Epoch 79/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 79/100\n",
       "768/768 [==============================] - 0s 239us/step - loss: 0.3034 - accuracy: 0.8711\n",
       "Epoch 80/100\n",
       "768/768 [==============================] - 0s 194us/step - loss: 0.3169 - accuracy: 0.8685\n",
@@ -382,9 +410,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keras",
+   "display_name": "learn_ML_venv",
    "language": "python",
-   "name": "keras"
+   "name": "learn_ml_venv"
   },
   "language_info": {
    "codemirror_mode": {
