--- a/src/ocr/ocr_keras.ipynb
+++ b/src/ocr/ocr_keras.ipynb
@@ -2,123 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "from keras.datasets import mnist\n",
-    "from keras.models import Sequential, load_model\n",
-    "from keras.layers.core import Dense, Dropout, Activation\n",
-    "\n",
-    "import matplotlib.pyplot as plt"
+    "from keras.utils import to_categorical\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Flatten"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-      "11493376/11490434 [==============================] - 2s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60000, 28, 28)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
-    "print(x_train.shape)\n",
-    "x_train"
+    "x_train, x_test = x_train / 255.0, x_test / 255.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -147,83 +62,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60000, 784)\n",
-      "(10000, 784)\n"
+      "(60000,)\n"
      ]
     }
    ],
    "source": [
-    "x_train = x_train.reshape(60000, 784)\n",
-    "x_test = x_test.reshape(10000, 784)\n",
-    "print(x_train.shape)\n",
-    "print(x_test.shape)"
+    "print(y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# build model\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(Dense(units=512, input_shape=(784,)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dropout(0.2))\n",
-    "\n",
-    "model.add(Dense(units=10))\n",
-    "model.add(Activation('softmax'))"
+    "model.add(Flatten(input_shape=[28, 28]))\n",
+    "model.add(Dense(512, activation='relu'))\n",
+    "model.add(Dense(10, activation='softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss='categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])"
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "60000/60000 [==============================] - 9s 149us/step - loss: 0.6058 - accuracy: 0.8528\n",
+      "Epoch 2/20\n",
+      "60000/60000 [==============================] - 9s 145us/step - loss: 0.3182 - accuracy: 0.9117\n",
+      "Epoch 3/20\n",
+      "60000/60000 [==============================] - 9s 145us/step - loss: 0.2706 - accuracy: 0.9243\n",
+      "Epoch 4/20\n",
+      "60000/60000 [==============================] - 9s 157us/step - loss: 0.2407 - accuracy: 0.9333\n",
+      "Epoch 5/20\n",
+      "60000/60000 [==============================] - 9s 158us/step - loss: 0.2175 - accuracy: 0.9398\n",
+      "Epoch 6/20\n",
+      "60000/60000 [==============================] - 10s 159us/step - loss: 0.1989 - accuracy: 0.9450\n",
+      "Epoch 7/20\n",
+      "60000/60000 [==============================] - 9s 157us/step - loss: 0.1834 - accuracy: 0.9489\n",
+      "Epoch 8/20\n",
+      "60000/60000 [==============================] - 9s 158us/step - loss: 0.1703 - accuracy: 0.9530\n",
+      "Epoch 9/20\n",
+      "60000/60000 [==============================] - 10s 162us/step - loss: 0.1589 - accuracy: 0.9557\n",
+      "Epoch 10/20\n",
+      "60000/60000 [==============================] - 9s 158us/step - loss: 0.1489 - accuracy: 0.9588\n",
+      "Epoch 11/20\n",
+      "60000/60000 [==============================] - 10s 158us/step - loss: 0.1401 - accuracy: 0.9616\n",
+      "Epoch 12/20\n",
+      "60000/60000 [==============================] - 10s 160us/step - loss: 0.1326 - accuracy: 0.9632\n",
+      "Epoch 13/20\n",
+      "60000/60000 [==============================] - 10s 158us/step - loss: 0.1255 - accuracy: 0.9657\n",
+      "Epoch 14/20\n",
+      "60000/60000 [==============================] - 10s 159us/step - loss: 0.1190 - accuracy: 0.9673\n",
+      "Epoch 15/20\n",
+      "60000/60000 [==============================] - 10s 158us/step - loss: 0.1134 - accuracy: 0.9690\n",
+      "Epoch 16/20\n",
+      "60000/60000 [==============================] - 10s 161us/step - loss: 0.1082 - accuracy: 0.9707\n",
+      "Epoch 17/20\n",
+      "60000/60000 [==============================] - 9s 156us/step - loss: 0.1034 - accuracy: 0.9721\n",
+      "Epoch 18/20\n",
+      "60000/60000 [==============================] - 9s 157us/step - loss: 0.0991 - accuracy: 0.9734\n",
+      "Epoch 19/20\n",
+      "60000/60000 [==============================] - 10s 159us/step - loss: 0.0949 - accuracy: 0.9748\n",
+      "Epoch 20/20\n",
+      "60000/60000 [==============================] - 9s 157us/step - loss: 0.0912 - accuracy: 0.9755\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x7fcb09325cd0>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Error when checking target: expected activation_2 to have shape (10,) but got array with shape (1,)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-04392aac17c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m           \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m           \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m           validation_data=(x_test, y_test))\n\u001b[0m",
-      "\u001b[0;32m~/Documents/learn_ML_venv/lib/python3.7/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[1;32m   1152\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1153\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1154\u001b[0;31m             batch_size=batch_size)\n\u001b[0m\u001b[1;32m   1155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1156\u001b[0m         \u001b[0;31m# Prepare validation data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/learn_ML_venv/lib/python3.7/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[1;32m    619\u001b[0m                 \u001b[0mfeed_output_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m                 \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Don't enforce the batch size.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 621\u001b[0;31m                 exception_prefix='target')\n\u001b[0m\u001b[1;32m    622\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    623\u001b[0m             \u001b[0;31m# Generate sample-wise weight values given the `sample_weight` and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/learn_ML_venv/lib/python3.7/site-packages/keras/engine/training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    143\u001b[0m                             \u001b[0;34m': expected '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' to have shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m                             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' but got array with shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m                             str(data_shape))\n\u001b[0m\u001b[1;32m    146\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Error when checking target: expected activation_2 to have shape (10,) but got array with shape (1,)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 1s 70us/step\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.10068323849327862, 0.97079998254776]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(x_train, y_train,\n",
-    "          batch_size=128, epochs=20,\n",
-    "          verbose=2,\n",
-    "          validation_data=(x_test, y_test))"
+    "model.evaluate(x_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "2\n",
+      "1\n",
+      "[7 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_new = x_test[:3]\n",
+    "res = model.predict_classes(x_new)\n",
+    "print(y_test[0])\n",
+    "print(y_test[1])\n",
+    "print(y_test[2])\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
